[Tech Knowledge][Linked List의 단방향, 이중, 환영 연결 리스트 내용 학습] 23-03-14

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,9 @@
       "sll.getIndex(2) : 1\n",
       "sll.getIndex(3) : 2\n",
       "1->2->3\n",
-      "1->11->2->3\n"
+      "1->2->5->3\n",
+      "1->4->2->5->3\n",
+      "1->4->5->3\n"
      ]
     }
    ],
@@ -1148,6 +1150,7 @@
     "    def __init__(self, data):\n",
     "        self.data = data\n",
     "        self.next = None\n",
+    "\n",
     "\n",
     "# Singly Linked List 선언\n",
     "class SinglyLinkedList(object):\n",
@@ -1186,6 +1189,7 @@
     "            current = current.next\n",
     "        return string\n",
     "\n",
+    "    # 원하는 데이터의 index 찾기\n",
     "    def getIndex(self, data):\n",
     "        current = self.head\n",
     "        index = 0\n",
@@ -1197,35 +1201,74 @@
     "\n",
     "        return index\n",
     "    \n",
-    "    # node를 원하는 index에 추가\n",
+    "    # 정해진 index에 node추가\n",
     "    def insert(self, index, node):\n",
-    "        current = self.head\n",
-    "        prev = None\n",
+    "        current_node = self.head\n",
     "        current_index = 0\n",
+    "        prev_node = None\n",
     "\n",
-    "        # index 0에 node 추가\n",
+    "        # index가 0인 경우\n",
     "        if index == 0:\n",
-    "            if current:\n",
-    "                next_node = current\n",
+    "            # 첫 번째 node가 존재하는 경우\n",
+    "            if current_node:\n",
+    "                next_node = current_node\n",
     "                self.head = node\n",
     "                self.head.next = next_node\n",
     "            else:\n",
+    "                # 첫 번째 node가 존재하지 않는 경우\n",
     "                self.head = node\n",
-    "        \n",
     "        else:\n",
+    "        # index가 0이 아닌 경우\n",
+    "            # 0부터 순차적으로 이전 node와 현재 node정보를 삽입할 index 번호 전까지 탐색\n",
     "            while current_index < index:\n",
-    "                if current:\n",
-    "                    prev = current\n",
-    "                    current = current.next\n",
+    "                if current_node:\n",
+    "                    prev_node = current_node\n",
+    "                    current_node = current_node.next\n",
     "                else:\n",
     "                    break\n",
     "                current_index += 1\n",
+    "\n",
+    "            # 삽입할 index번호까지 current_index가 왔을 경우\n",
+    "            # 이전 node의 다음 주소와 삽입할 node의 다음 주소를 연결\n",
     "            if current_index == index:\n",
-    "                node.next = current\n",
-    "                prev.next = node\n",
+    "                node.next = current_node\n",
+    "                prev_node.next = node\n",
     "            else:\n",
     "                return -1\n",
-    "            \n",
+    "\n",
+    "    # 원하는 data를 찾아 그 위치에 node 삽입\n",
+    "    def insertNodeAtData(self, data, node):\n",
+    "        index = self.getIndex(data)\n",
+    "        if 0 <= index:\n",
+    "            self.insert(index, node)\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "    # 원하는 node 사제\n",
+    "    def delete(self, index):\n",
+    "        current_index = 0\n",
+    "        current_node = self.head\n",
+    "        prev_node = None\n",
+    "        next_node = self.head.next\n",
+    "\n",
+    "        # index가 0인 경우\n",
+    "        if index == 0:\n",
+    "            self.head = next_node\n",
+    "        else:\n",
+    "            while current_index < index:\n",
+    "                # 현재 node의 다음이 존재하는 경우\n",
+    "                if current_node.next:\n",
+    "                    prev_node = current_node\n",
+    "                    current_node = next_node\n",
+    "                    next_node = next_node.next\n",
+    "                else:\n",
+    "                # 현재 node의 다음이 없는 경우\n",
+    "                    break\n",
+    "                current_index += 1\n",
+    "            if current_index == index:\n",
+    "                prev_node.next = next_node\n",
+    "            else:\n",
+    "                return -1\n",
     "\n",
     "# 현재 페이지 실행\n",
     "if __name__ == \"__main__\":\n",
@@ -1241,16 +1284,393 @@
     "    print(f'sll.getIndex(3) : {sll.getIndex(3)}')\n",
     "    print(sll)\n",
     "\n",
-    "    sll.insert(1, Node(11))\n",
-    "    print(sll)\n"
+    "    sll.insert(2, Node(5))\n",
+    "    print(sll)\n",
+    "\n",
+    "    sll.insertNodeAtData(2, Node(4))\n",
+    "    print(sll)\n",
+    "\n",
+    "    sll.delete(2)\n",
+    "    print(sll)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이중 연결 리스트(Doubly Linked List)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1->2->3\n",
+      "1->6->2->3\n",
+      "1\n",
+      "3\n",
+      "1->4->6->2->3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Node\n",
+    "class Node(object):\n",
+    "    def __init__(self, data):\n",
+    "        self.prev = None\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "    \n",
+    "\n",
+    "# 이중 연결 리스트\n",
+    "class DoublyLinkedList(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        current = self.head\n",
+    "        string = \"\"\n",
+    "\n",
+    "        while current:\n",
+    "            string += str(current.data)\n",
+    "            if current.next:\n",
+    "                string += \"->\"\n",
+    "            current = current.next\n",
+    "        return string\n",
+    "\n",
+    "    # node 추가\n",
+    "    def append(self, node):\n",
+    "        # 첫 번째 node가 존재하는 경우\n",
+    "        if self.head:\n",
+    "            current = self.head\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = node\n",
+    "            node.prev = current\n",
+    "        else:\n",
+    "        # 첫 번째 node가 존재하지 않는 경우\n",
+    "            self.head = node\n",
+    "    \n",
+    "    # 원하는 index에 node 삽입\n",
+    "    def insert(self, index, node):\n",
+    "        prev_node = None\n",
+    "        next_node = None\n",
+    "\n",
+    "        # 첫 번째 node에 추가 하는 경우\n",
+    "        if index == 0:\n",
+    "            if self.head:\n",
+    "                next_node = self.head\n",
+    "                self.head = node\n",
+    "                self.head.next = next_node\n",
+    "                next_node.prev = self.head\n",
+    "            else:\n",
+    "                self.head = node\n",
+    "        else:\n",
+    "        # 중간 or 맨 끝에 추가하는 경우\n",
+    "            current_index = 0\n",
+    "            current = self.head\n",
+    "            while current_index < index:\n",
+    "                if current:\n",
+    "                    prev_node = current\n",
+    "                    current = current.next\n",
+    "                else:\n",
+    "                    break\n",
+    "                current_index += 1\n",
+    "\n",
+    "            if current_index == index:\n",
+    "                prev_node.next = node\n",
+    "                node.prev = prev_node\n",
+    "                node.next = current\n",
+    "\n",
+    "                # 중간에 node를 추가하는 경우 이전 노드 정보에 삽입하는 node 추가 \n",
+    "                if current:\n",
+    "                    current.prev = node\n",
+    "            else:\n",
+    "                return -1\n",
+    "\n",
+    "    # 원하는 data의 index값 얻기\n",
+    "    def getIndex(self, data):\n",
+    "        current = self.head\n",
+    "        current_index = 0\n",
+    "\n",
+    "        while current:\n",
+    "            if current.data == data:\n",
+    "                return current_index\n",
+    "            current = current.next\n",
+    "            current_index += 1\n",
+    "        return current_index\n",
+    "\n",
+    "    # 삽입을 원하는 데이터 위치에 넘겨준 데이터 넣기\n",
+    "    def insertNodeAtData(self, data, node):\n",
+    "        index = self.getIndex(data)\n",
+    "        if index >= 0:\n",
+    "            self.insert(index, node)\n",
+    "        else:\n",
+    "            return -1\n",
+    "        \n",
+    "    def delete(self, index):\n",
+    "        next_node = None\n",
+    "        prev_node = None\n",
+    "        current_index = 0\n",
+    "\n",
+    "        # 삭제를 원하는 index가 1인 경우\n",
+    "        if index == 0:\n",
+    "            if self.head:\n",
+    "                self.head = self.head.next\n",
+    "                self.head.prev = None\n",
+    "            else:\n",
+    "                return -1\n",
+    "        current = self.head    \n",
+    "\n",
+    "        while current_index < index:\n",
+    "            if current.next:\n",
+    "                prev_node = current\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    dll = DoublyLinkedList()\n",
+    "    dll.append(Node(1))\n",
+    "    dll.append(Node(2))\n",
+    "    dll.append(Node(3))\n",
+    "    print(dll)\n",
+    "\n",
+    "    dll.insert(1, Node(6))\n",
+    "    print(dll)\n",
+    "    print(dll.getIndex(6))\n",
+    "    print(dll.getIndex(3))\n",
+    "\n",
+    "    dll.insertNodeAtData(6, Node(4))\n",
+    "    print(dll)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 환형(순환형) 연결 리스트(Circular Linked List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "->1->\n",
+      "->1->2->\n",
+      "0\n",
+      "1\n",
+      "->1->2->3->\n",
+      "->1->4->2->3->\n",
+      "->1->4->3->\n",
+      "->1->4->\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 노드\n",
+    "class Node(object):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "# 환형 연결 리스트\n",
+    "class CircularLinkedList(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        current = self.head\n",
+    "        string = \"\"\n",
+    "\n",
+    "        while current:\n",
+    "            string += str(current.data)\n",
+    "            if current.next:\n",
+    "                string += '->'\n",
+    "            if current.next == self.head:\n",
+    "                string = '->' + string\n",
+    "                break\n",
+    "            current = current.next\n",
+    "        return string\n",
+    "\n",
+    "    # 새 노드 추가\n",
+    "    def append(self, node):\n",
+    "        # 첫 번째 node가 존재하는 경우\n",
+    "        if self.head:\n",
+    "            current = self.head\n",
+    "\n",
+    "            # 현재의 노드가 다음이 아닌경우(노드가 1개가 아닌 경우)\n",
+    "            while current.next != self.head:\n",
+    "                current = current.next\n",
+    "            current.next = node\n",
+    "            node.next = self.head\n",
+    "        else:\n",
+    "        # 첫 번째 node가 처음 연결 리스트로 들어가는 경우 next가 자기 자신을 바라본다.\n",
+    "            self.head = node\n",
+    "            node.next = self.head\n",
+    "    \n",
+    "    # 원하는 data의 index\n",
+    "    def getIndex(self, data):\n",
+    "        index = 0\n",
+    "        current = self.head\n",
+    "\n",
+    "        if current.data == data:\n",
+    "            return index\n",
+    "        \n",
+    "        index += 1\n",
+    "        current = current.next\n",
+    "        while current != self.head:\n",
+    "            if current.data == data:\n",
+    "                return index\n",
+    "            current = current.next\n",
+    "            index +=1\n",
+    "        return index\n",
+    "    \n",
+    "    # 원하는 위치에 node 추가\n",
+    "    def insert(self, index, node):\n",
+    "        # 연결 리스트의 첫 번째 삽입하는 경우\n",
+    "        if index == 0:\n",
+    "            if self.head:\n",
+    "                current = self.head.next\n",
+    "                current_index = 1\n",
+    "                while current.next != self.head:\n",
+    "                    current = current.next\n",
+    "                    current_index += 1\n",
+    "\n",
+    "                node.next = self.head\n",
+    "                self.head = node\n",
+    "                current.next = self.head\n",
+    "                return\n",
+    "            else:\n",
+    "                self.head = node\n",
+    "                self.head.next = self.head\n",
+    "                return\n",
+    "        \n",
+    "        current_index = 1\n",
+    "        prev_node = self.head\n",
+    "        current = self.head.next\n",
+    "\n",
+    "        # -> 1 -> 2 ->\n",
+    "        while current.next != self.head:\n",
+    "            if current_index == index:\n",
+    "                prev_node.next = node\n",
+    "                node.next = current\n",
+    "                return\n",
+    "            prev_node = current\n",
+    "            current = current.next\n",
+    "            current_index += 1\n",
+    "\n",
+    "        current_index += 1\n",
+    "\n",
+    "        if current_index == index:\n",
+    "            prev_node = current\n",
+    "            current = current.next\n",
+    "            prev_node.next = node\n",
+    "            node.next = current\n",
+    "            return\n",
+    "        return -1\n",
+    "\n",
+    "    # 특정 data앞에 원하는 node 추가\n",
+    "    def insertNodeAtData(self, data, node):\n",
+    "        index = self.getIndex(data)\n",
+    "        if index >= 0:\n",
+    "            self.insert(index, node)\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "    # 특정 데이터 삭제\n",
+    "    def removeData(self, data):\n",
+    "        prev_node = self.head\n",
+    "        current = self.head.next\n",
+    "\n",
+    "        # head가 삭제해야 할 데이터의 경우\n",
+    "        if self.head.data == data:\n",
+    "            # head -1 위치 까지 탐색\n",
+    "            while current != self.head:\n",
+    "                prev_node = current\n",
+    "                current = current.next\n",
+    "            \n",
+    "            # head -1 위치의 next에 head의 다음 node정보\n",
+    "            # head 위치에 next 정보\n",
+    "            prev_node.next = current.next\n",
+    "            self.head = current.next\n",
+    "            return\n",
+    "        \n",
+    "        # head -1 위치 까지 탐색\n",
+    "        while current != self.head:\n",
+    "            if current.data == data:\n",
+    "                prev_node.next = current.next\n",
+    "                return\n",
+    "            prev_node = current\n",
+    "            current = current.next\n",
+    "\n",
+    "        return -1\n",
+    "\n",
+    "    # 특정 index의 node 제거\n",
+    "    def removePosition(self, index):\n",
+    "        if index == 0:\n",
+    "            if self.head:\n",
+    "                if self.head.next:\n",
+    "                    current = self.head.next\n",
+    "                    while current.next != self.head:\n",
+    "                        current = current.next\n",
+    "                    current.next = self.head.next\n",
+    "                    self.head = self.head.next\n",
+    "                    return\n",
+    "                else:\n",
+    "                    self.head = None\n",
+    "                    return\n",
+    "        else:\n",
+    "            prev_node = self.head\n",
+    "            current = self.head.next\n",
+    "            current_index = 1\n",
+    "            while current != self.head:\n",
+    "                if current_index == index:\n",
+    "                    next_node = current.next\n",
+    "                    prev_node.next = next_node\n",
+    "                    return\n",
+    "                prev_node = current\n",
+    "                current = current.next\n",
+    "                current_index += 1\n",
+    "            return -1\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    cll = CircularLinkedList()\n",
+    "    cll.append(Node(1))\n",
+    "    print(cll)\n",
+    "    cll.append(Node(2))\n",
+    "    print(cll)\n",
+    "\n",
+    "    print(cll.getIndex(1))\n",
+    "    print(cll.getIndex(2))\n",
+    "\n",
+    "    cll.insert(2, Node(3))\n",
+    "    print(cll)\n",
+    "\n",
+    "    cll.insertNodeAtData(2, Node(4))\n",
+    "    print(cll)\n",
+    "\n",
+    "    cll.removeData(2)\n",
+    "    print(cll)\n",
+    "\n",
+    "    cll.removePosition(2)\n",
+    "    print(cll)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
