[Tech Knowledge][스택-큐를 파이썬으로 구현하기] 23-03-16

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -1673,6 +1673,358 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 스택(Stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stack.isEmpty() : True\n",
+      "stack : [1, 2, 3]\n",
+      "stack.isEmpty() : False\n",
+      "stack.pop() : 3\n",
+      "stack.top() : 2\n",
+      "stack.pop() : 2\n",
+      "stack.top() : 1\n",
+      "stack : [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열로 구현\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "\n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        return str(self.stack)\n",
+    "\n",
+    "    # 데이터 삽입\n",
+    "    def push(self, data):\n",
+    "        self.stack.append(data)\n",
+    "\n",
+    "    # 유뮤 확인\n",
+    "    def isEmpty(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    # 데이터 제외\n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Stack is empty'\n",
+    "        else:\n",
+    "            return self.stack.pop()\n",
+    "        \n",
+    "    # stack top 확인\n",
+    "    def top(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Stack is empty'\n",
+    "        else:\n",
+    "            return self.stack[-1]\n",
+    "    \n",
+    "\n",
+    "stack = Stack()\n",
+    "print(f'stack.isEmpty() : {stack.isEmpty()}')\n",
+    "stack.push(1)\n",
+    "stack.push(2)\n",
+    "stack.push(3)\n",
+    "print(f'stack : {stack}')\n",
+    "print(f'stack.isEmpty() : {stack.isEmpty()}')\n",
+    "print(f'stack.pop() : {stack.pop()}')\n",
+    "print(f'stack.top() : {stack.top()}')\n",
+    "print(f'stack.pop() : {stack.pop()}')\n",
+    "print(f'stack.top() : {stack.top()}')\n",
+    "print(f'stack : {stack}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sls.isEmpty() : True\n",
+      "sls.isEmpty() : False\n",
+      "sls.top() : 1\n",
+      "sls.top() : 2\n",
+      "sls : 2->1\n",
+      "sls.pop() : 2\n",
+      "sls : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연결리스트로 구현\n",
+    "# Singly Linked Stack\n",
+    "\n",
+    "# Node\n",
+    "class Node:\n",
+    "    def __init__(self, data) -> None:\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "# 단일 연결 스택\n",
+    "class SinglyLinkedStack:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.head = None\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if not self.isEmpty():\n",
+    "            current = self.head\n",
+    "            string = ''\n",
+    "\n",
+    "            while current:\n",
+    "                string += str(current.data)\n",
+    "                if current.next:\n",
+    "                    string += '->'\n",
+    "                if current.next == self.head:\n",
+    "                    string += '->' + string\n",
+    "                    break\n",
+    "                current = current.next\n",
+    "            return string \n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        if self.head is None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Stack is Empty'\n",
+    "        else:\n",
+    "            popped = self.head.data\n",
+    "            self.head = self.head.next\n",
+    "            return popped\n",
+    "        \n",
+    "    def push(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        # push된 데이터는 head를 가리킨다.\n",
+    "        new_node.next = self.head\n",
+    "\n",
+    "        # head는 top 데이터가 된다.\n",
+    "        self.head = new_node\n",
+    "\n",
+    "    def top(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Stack is Empty'\n",
+    "        else:\n",
+    "            return self.head.data\n",
+    "        \n",
+    "sls = SinglyLinkedStack()\n",
+    "print(f'sls.isEmpty() : {sls.isEmpty()}')\n",
+    "sls.push(1)\n",
+    "print(f'sls.isEmpty() : {sls.isEmpty()}')\n",
+    "print(f'sls.top() : {sls.top()}')\n",
+    "sls.push(2)\n",
+    "print(f'sls.top() : {sls.top()}')\n",
+    "print(f'sls : {sls}')\n",
+    "print(f'sls.pop() : {sls.pop()}')\n",
+    "print(f'sls : {sls}')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 큐"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "queue.isEmpty() : True\n",
+      "queue.isEmpty() : False\n",
+      "queue : [1, 2, 3]\n",
+      "peek : 1\n",
+      "queue.dequeue() : 1\n",
+      "queue : [2, 3]\n",
+      "peek : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열로 구현\n",
+    "class Queue:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.queue = []\n",
+    "\n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Queue is Empty'\n",
+    "        else:\n",
+    "            return str(self.queue)\n",
+    "\n",
+    "    # 유무 확인\n",
+    "    def isEmpty(self):\n",
+    "        if not self.queue:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    # 추가\n",
+    "    def enqueue(self, data):\n",
+    "        self.queue.append(data)\n",
+    "\n",
+    "    # 제거\n",
+    "    def dequeue(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Queue is Emtpy'\n",
+    "        else:\n",
+    "            dequeued = self.queue[0]\n",
+    "            # 꺼낸 뒤 나머지 재정비\n",
+    "            self.queue = self.queue[1:]\n",
+    "            return  dequeued\n",
+    "\n",
+    "    # front가 무엇인지 보여준다.\n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Queue is Empty'\n",
+    "        else:\n",
+    "            peeked = self.queue[0]\n",
+    "            return peeked\n",
+    "\n",
+    "queue = Queue()\n",
+    "print(f'queue.isEmpty() : {queue.isEmpty()}')\n",
+    "\n",
+    "queue.enqueue(1)\n",
+    "print(f'queue.isEmpty() : {queue.isEmpty()}')\n",
+    "\n",
+    "\n",
+    "queue.enqueue(2)\n",
+    "queue.enqueue(3)\n",
+    "print(f'queue : {queue}')\n",
+    "print(f'peek : {queue.peek()}')\n",
+    "print(f'queue.dequeue() : {queue.dequeue()}')\n",
+    "print(f'queue : {queue}')\n",
+    "print(f'peek : {queue.peek()}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "llq.isEmpty() : True\n",
+      "llq.isEmpty() : False\n",
+      "llq : 1->2->3\n",
+      "llq.peek() : 1\n",
+      "llq : 2->3\n",
+      "llq.peek() : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연결리스트로 구현\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "class LinkedListQueue:\n",
+    "    def __init__(self):\n",
+    "        self.front = None\n",
+    "        self.rear = None\n",
+    "    \n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        current = self.front\n",
+    "        rear = self.rear\n",
+    "        string = ''\n",
+    "        while current:\n",
+    "            string += str(current.data)\n",
+    "            if current.next:\n",
+    "                string += '->'\n",
+    "            if current.next == self.front:\n",
+    "                string += '->' + string\n",
+    "                break\n",
+    "            current = current.next\n",
+    "        return string\n",
+    "\n",
+    "    # 유무 확인\n",
+    "    def isEmpty(self):\n",
+    "        if self.front is None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    # 추가\n",
+    "    def enqueue(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if self.isEmpty():\n",
+    "            self.front = new_node\n",
+    "            self.rear = new_node\n",
+    "        else:\n",
+    "            self.rear.next = new_node\n",
+    "            self.rear = new_node\n",
+    "\n",
+    "    # 제거\n",
+    "    def dequeue(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Queue is Empty'\n",
+    "        else:\n",
+    "            dequeued = self.front\n",
+    "            self.front = self.front.next\n",
+    "        \n",
+    "        # front가 None이 되면 큐가 비었다는 뜻이므로 rear도 None로 변경\n",
+    "        if self.front is None:\n",
+    "            self.rear = None\n",
+    "    \n",
+    "    # 앞의 front 데이터 확인\n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            return 'Queue is Empty'\n",
+    "        else:\n",
+    "            return self.front.data\n",
+    "        \n",
+    "\n",
+    "llq = LinkedListQueue()\n",
+    "print(f'llq.isEmpty() : {llq.isEmpty()}')\n",
+    "\n",
+    "llq.enqueue(1)\n",
+    "print(f'llq.isEmpty() : {llq.isEmpty()}')\n",
+    "llq.enqueue(2)\n",
+    "llq.enqueue(3)\n",
+    "print(f'llq : {llq}')\n",
+    "print(f'llq.peek() : {llq.peek()}')\n",
+    "llq.dequeue()\n",
+    "print(f'llq : {llq}')\n",
+    "print(f'llq.peek() : {llq.peek()}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
