[Tech Knowledge][이진탐색트리(Binary Search Tree) 학습] 23-03-19

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -2023,6 +2023,237 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이진 탐색 트리(Binary Search Tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 11, 12, 529, 533, 543, 545, 41, 43, 565, 566, 55, 59, 63, 85, 88, 93, 607, 97, 610, 101, 135, 657, 158, 674, 677, 678, 679, 167, 170, 692, 186, 712, 713, 717, 728, 216, 730, 735, 736, 742, 743, 234, 248, 762, 255, 259, 261, 262, 775, 265, 274, 278, 806, 808, 301, 822, 314, 319, 832, 322, 839, 328, 329, 840, 844, 337, 339, 853, 862, 359, 877, 370, 375, 892, 384, 391, 393, 396, 400, 412, 928, 931, 932, 936, 937, 940, 429, 953, 965, 455, 977, 472, 473, 477, 478, 479, 481, 482, 501}\n",
+      "{384, 931, 806, 840, 396, 314, 301, 248, 186, 93}\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 384\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 931\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 806\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 840\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 396\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 314\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 301\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 248\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 186\n",
+      "search success {384, 931, 806, 840, 396, 314, 301, 248, 186, 93} 93\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 노드\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.left, self.right = None, None\n",
+    "\n",
+    "# 이진 탐색 트리\n",
+    "class BinarySearchTree:\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "    \n",
+    "    def insert(self, data):\n",
+    "        self.current_node = self.head\n",
+    "        while True:\n",
+    "            if data < self.current_node.data:\n",
+    "                if self.current_node.left != None:\n",
+    "                    self.current_node = self.current_node.left\n",
+    "                else:\n",
+    "                    self.current_node.left = Node(data)\n",
+    "                    break\n",
+    "            else:\n",
+    "                if self.current_node.right != None:\n",
+    "                    self.current_node = self.current_node.right\n",
+    "                else:\n",
+    "                    self.current_node.right = Node(data)\n",
+    "                    break\n",
+    "\n",
+    "    def search(self, data):\n",
+    "        self.current_node = self.head\n",
+    "        while self.current_node:\n",
+    "            if self.current_node.data == data:\n",
+    "                return True\n",
+    "            elif data < self.current_node.data:\n",
+    "                self.current_node = self.current_node.left\n",
+    "            else:\n",
+    "                self.current_node = self.current_node.right\n",
+    "        return False\n",
+    "    \n",
+    "    def delete(self, data):\n",
+    "        searched = False\n",
+    "        self.current_node, self.parent = self.head, self.head\n",
+    "\n",
+    "        # 현재 노드가 존재하면 계속해서 loop \n",
+    "        while self.current_node:\n",
+    "            # 인자로 전달받은 값과 현재노드 값이 동일\n",
+    "            if self.current_node.data == data:\n",
+    "                searched = True\n",
+    "                break\n",
+    "            # 동일하지 않은 경우 현재 노드보다 작은지 큰지 확인하여 현재 노드 이동\n",
+    "            elif data < self.current_node.data:\n",
+    "                self.parent = self.current_node\n",
+    "                self.current_node = self.current_node.left\n",
+    "            else:\n",
+    "                self.parent = self.current_node\n",
+    "                self.current_node = self.current_node.right\n",
+    "                \n",
+    "        # 삭제할 Node가 존재하지 않는 경우\n",
+    "        if searched == False:\n",
+    "            return False\n",
+    "        \n",
+    "        # case 1 : 자식 노드가 존재하지 않는 Leaf Node인 경우\n",
+    "        if self.current_node.left == None and self.current_node.right == None:\n",
+    "            # 삭제하려는 값이 부모 노드의 왼쪽(값이 작은 경우)\n",
+    "            # 부모 노드의 left 연결을 끊기\n",
+    "            if data < self.parent.data:\n",
+    "                self.parent.left = None\n",
+    "            # 삭제하려는 값이 부모 노드의 오른쪽(값이 큰 경우)\n",
+    "            # 부모 노드의 right 연결을 끊기\n",
+    "            else:\n",
+    "                self.parent.right = None\n",
+    "\n",
+    "        # case 2 : 자식 노드가 하나만 존재하는 경우\n",
+    "        # 삭제하려는 노드의 왼쪽 자식노드가 존재하는 경우\n",
+    "        elif self.current_node.left != None and self.current_node.right == None:\n",
+    "            # 부모 노드보다 삭제하려는 노드 값이 작은 경우\n",
+    "            if data < self.parent.data:\n",
+    "                # 부모노드 왼쪽 자식노드에 삭제하려는 노드의 자식 노드를 연결\n",
+    "                self.parent.left = self.current_node.left\n",
+    "\n",
+    "            # 부모 노드보다 삭제하려는 노드 값이 큰 경우    \n",
+    "            else:\n",
+    "                # 부모노드 오른쪽 자식노드에 삭제하려는 노드의 자식 노드 연결\n",
+    "                self.parent.right = self.current_node.left\n",
+    "\n",
+    "        # 삭제하려는 노드의 오른쪽 자식노드가 존재하는 경우\n",
+    "        elif (self.current_node.left == None) and (self.current_node.right != None):\n",
+    "            # 부모 노드보다 삭제하려는 노드 값이 작은 경우\n",
+    "            if data < self.parent.data:\n",
+    "                # 부모노드 왼쪽 자식노드에 삭제하려는 노드의 자식 노드를 연결\n",
+    "                self.parent.left = self.current_node.right\n",
+    "\n",
+    "            # 부모 노드 보다 삭제하려는 노드 값이 큰 경우   \n",
+    "            else:\n",
+    "                # 부모노드 오른쪽 자식노드에 삭제하려는 노드의 자식 노드를 연결\n",
+    "                self.parent.right = self.current_node.right\n",
+    "\n",
+    "        # case 3-1 : 자식 노드 두개 모두 존재하는 경우\n",
+    "        elif self.current_node.left != None and self.current_node.right != None:\n",
+    "            # 삭제할 노드가 부모 노드의 왼쪽(작은 값)인 경우\n",
+    "            if data < self.parent.data:\n",
+    "                self.change_node = self.current_node.right\n",
+    "                self.change_node_parent = self.current_node.right\n",
+    "\n",
+    "                # 우측 하위 노드의 가장 작은 값을 탐색\n",
+    "                # 즉, 우측 하위 노드의 하위 자식이 없는 좌측 노드 탐색\n",
+    "                while self.change_node.left != None:\n",
+    "                    self.change_node_parent = self.change_node\n",
+    "                    self.change_node = self.change_node.left\n",
+    "\n",
+    "                # 가장 작은 값의 오른쪽 자식 노드가 있는 경우\n",
+    "                if self.change_node.right != None:\n",
+    "                    self.change_node_parent.left = self.change_node.right\n",
+    "                # 가장 작은 값의 오른쪽 자식 노드가 없는 경우\n",
+    "                # 해당 노드의 연결을 끊고    \n",
+    "                else:\n",
+    "                    self.change_node_parent.left = None\n",
+    "                \n",
+    "                # 위에서 끊은 노드를 삭제하려는 노드에 연결\n",
+    "                self.parent.left = self.change_node\n",
+    "                self.change_node.right = self.current_node.right\n",
+    "                self.change_node.left = self.change_node.left\n",
+    "\n",
+    "            # Case 3-2 : 삭제할 노드가 부모 노드의 오른쪽(큰 값)인 경우\n",
+    "            else:\n",
+    "                self.change_node = self.current_node.right\n",
+    "                self.change_node_parent = self.current_node.right\n",
+    "\n",
+    "                # 가장 작은 값 탐색\n",
+    "                while self.change_node.left != None:\n",
+    "                    self.chagne_node_parent = self.change_node\n",
+    "                    self.change_node = self.change_node.left\n",
+    "\n",
+    "                if self.change_node.right != None:\n",
+    "                    self.change_node_parent.left = self.change_node.right\n",
+    "                else:\n",
+    "                    # 가장 작은 값의 연결을 끊고\n",
+    "                    self.chagne_node_parent.left = None\n",
+    "\n",
+    "                # 위에서 끊은 노드를 삭제하려는 노드에 연결\n",
+    "                self.parent.right = self.change_node\n",
+    "                self.change_node.left = self.current_node.left\n",
+    "                self.change_node.right = self.current_node.right\n",
+    "        return True\n",
+    "\n",
+    "# binary_search_tree = BinarySearchTree(Node(1))\n",
+    "# binary_search_tree.insert(2)\n",
+    "# binary_search_tree.insert(0)\n",
+    "# binary_search_tree.insert(4)\n",
+    "# binary_search_tree.insert(8)\n",
+    "# binary_search_tree.insert(-2)\n",
+    "\n",
+    "# binary_search_tree.search(8)\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "# 1~1000 중, 100개의 숫자 랜덤 선택\n",
+    "bst_nums = set()\n",
+    "while len(bst_nums) != 100:\n",
+    "    bst_nums.add(random.randint(0, 999))\n",
+    "print(bst_nums)\n",
+    "\n",
+    "# 100개의 숫자 이진 탐색 트리에 입력, 임의로 푸트 노드는 500을 넣기로 함\n",
+    "head = Node(500)\n",
+    "binary_search_tree = BinarySearchTree(head)\n",
+    "for num in bst_nums:\n",
+    "    binary_search_tree.insert(num)\n",
+    "\n",
+    "# 입력한 100개의 숫자를 검색(검색 기능 확인)\n",
+    "for num in bst_nums:\n",
+    "    if binary_search_tree.search(num) == False:\n",
+    "        print('search failed', num)\n",
+    "    else:\n",
+    "        # print('search success', num)\n",
+    "        pass\n",
+    "\n",
+    "# 입력한 100개의 숫자 중 10개의 숫자를 랜덤 선택\n",
+    "delete_nums = set()\n",
+    "bst_nums = list(bst_nums)\n",
+    "while len(delete_nums) != 10:\n",
+    "    delete_nums.add(bst_nums[random.randint(0, 99)])\n",
+    "\n",
+    "print(delete_nums)\n",
+    "\n",
+    "# 선택한 10개의 숫자를 삭제(삭제 기능 확인)\n",
+    "for del_num in delete_nums:\n",
+    "    if binary_search_tree.delete(del_num) == False:\n",
+    "        print('search failed', delete_nums, del_num)\n",
+    "    else:\n",
+    "        print('search success', delete_nums, del_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
